assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Montserrat:700|Raleway:400,700&display=swap");

@font-face {
  font-family: "Reey";
  src: url("~static/webfonts/Reey-Regular.eot");
  src: url("~static/webfonts/Reey-Regular.eot?#iefix")
      format("embedded-opentype"),
    url("~static/webfonts/Reey-Regular.woff2") format("woff2"),
    url("~static/webfonts/Reey-Regular.woff") format("woff"),
    url("~static/webfonts/Reey-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "davecast";
  src: url("~static/webfonts/davecast.eot");
  src: url("~static/webfonts/davecast.eot") format("embedded-opentype"),
    url("~static/webfonts/davecast.ttf") format("truetype"),
    url("~static/webfonts/davecast.woff") format("woff"),
    url("~static/webfonts/davecast.svg") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

[class^="dc-icon-"],
[class*="dc-icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: "davecast" !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.dc-icon-star-solid:before {
  content: "\e900";
}
.dc-icon-info:before {
  content: "\e910";
}
.dc-icon-search:before {
  content: "\e911";
}
.dc-icon-marca:before {
  content: "\e912";
}
.dc-icon-develop:before {
  content: "\e913";
}
.dc-icon-post:before {
  content: "\e914";
}
.dc-icon-print:before {
  content: "\e915";
}
.dc-icon-ui:before {
  content: "\e916";
}
.dc-icon-ux:before {
  content: "\e917";
}
.dc-icon-copy:before {
  content: "\e918";
}
.dc-icon-heart:before {
  content: "\e919";
}
.dc-icon-bible:before {
  content: "\e91a";
}
.dc-icon-envelope:before {
  content: "\e91b";
}
.dc-icon-point:before {
  content: "\e91c";
}
.dc-icon-whatsapp-brands:before {
  content: "\e91d";
}
.dc-icon-platzi:before {
  content: "\e91e";
}
.dc-icon-facebook-square-brands:before {
  content: "\e91f";
}
.dc-icon-instagram-brands:before {
  content: "\e920";
}
.dc-icon-github-square:before {
  content: "\e921";
}
.dc-icon-linkedin-brands:before {
  content: "\e922";
}

body {
  margin: 0px;
  font-family: "Raleway", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-size: auto 550px;
  background-repeat: no-repeat;
  background-position: top center;
  background-image: url("~static/image/top__back.jpg");
}
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
figure {
  margin: 0;
  padding: 0;
  font-size: 0;
}
a {
  cursor: pointer;
  text-decoration: none;
  font-family: "Raleway", sans-serif;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-family: "Montserrat", sans-serif;
}
p {
  margin: 0;
}

.separator__bottom--35 {
  padding-bottom: 35px;
}

.section {
  padding: 35px 0;
}
.section__bottom__100 {
  padding-bottom: 100px;
}
.section__bottom__150 {
  padding-bottom: 100px;
}
.section__no--top {
  padding-top: 0px;
}
.section__no--bottom {
  padding-bottom: 0px;
}
.container {
  width: 100%;
  max-width: 1240px;
  margin: 0 auto;
}
.grid {
  display: grid;
  grid-template: 1fr / repeat(12, 1fr);
}
.grid__gap--20 {
  grid-gap: 20px;
}
.grid__gap--30 {
  grid-gap: 30px;
}
.grid__4__8 {
  grid-template-areas: "area1 area1 area1 area1 area2 area2 area2 area2 area2 area2 area2 area2";
}
.grid__6__6 {
  grid-template-areas: "area1 area1 area1 area1 area1 area1 area2 area2 area2 area2 area2 area2";
}
.grid__8__4 {
  grid-template-areas: "area1 area1 area1 area1 area1 area1 area1 area1 area2 area2 area2 area2";
}
.grid__4__4__4 {
  grid-template-areas: "area1 area1 area1 area1 area2 area2 area2 area2 area3 area3 area3 area3";
}
.grid__3__3__3__3 {
  grid-template-areas: "area1 area1 area1 area2 area2 area2 area3 area3 area3 area4 area4 area4";
}
.grid__area--1 {
  grid-area: area1;
}
.grid__area--2 {
  grid-area: area2;
}
.grid__area--3 {
  grid-area: area3;
}
.grid__area--4 {
  grid-area: area4;
}
.grid__area--5 {
  grid-area: area5;
}
.grid__area--6 {
  grid-area: area6;
}
.grid__v__self--center {
  align-self: center;
}
.grid__h__self--center {
  justify-self: center;
}

.bottom__back::before,
.bottom__back::after,
.center__bottom__back,
.center__top__back {
  background-size: auto 550px;
  background-repeat: no-repeat;
}
.bottom__back {
  position: relative;
}
.bottom__back .container {
  z-index: 2;
}
.bottom__back::before,
.bottom__back::after {
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
}

.bottom__back::before {
  background-position: top center;
  background-image: url("~static/image/center__bottom__back.jpg");
}
.bottom__back::after {
  background-position: bottom center;
  background-image: url("~static/image/center__top__back.jpg");
}
.center__top__back {
  background-position: bottom center;
  background-image: url("~static/image/center__top__back.jpg");
}
.center__bottom__back {
  background-position: top center;
  background-image: url("~static/image/center__bottom__back.jpg");
}

.back--grey {
  background-color: #f4f4f4;
}
.back--blue {
  background-color: #0099cc;
}
.back--greenblue {
  background-color: #003c4c;
}

.text--raleway {
  font-family: "Raleway", sans-serif;
}
.text--montserrat {
  font-family: "Montserrat", sans-serif;
}
.text--reey {
  font-family: "Reey", sans-serif;
  letter-spacing: 0.8px;
}
.text--300 {
  font-weight: 300;
}
.text--500 {
  font-weight: 500;
}
.text--700 {
  font-weight: 700;
}
.text--center {
  text-align: center;
}
.text--right {
  text-align: right;
}
.text--left {
  text-align: left;
}
.text--white {
  color: #fff;
}
.text--blue {
  color: #0099cc;
}
.text--grey {
  color: #cccccc;
}
.text--grey--hover:hover {
  color: #cccccc !important;
}
.text--black {
  color: #333;
}
.text--black--hover:hover {
  color: #333;
}
.text--normal {
  font-size: 16px;
  line-height: 29px;
}
.text--big {
  font-size: 24px;
  line-height: 37px;
}
.text--great {
  font-size: 32px;
  line-height: 32px;
}

.heading {
  font-size: 18px;
  line-height: 18px;
}

.mt--x1 {
  margin-top: 10px;
}
.mt--x1-2 {
  margin-top: 15px;
}
.mt--x2 {
  margin-top: 20px;
}
.mt--x3 {
  margin-top: 30px;
}
.mb--x1 {
  margin-bottom: 10px;
}
.mb--x1-2 {
  margin-bottom: 15px;
}
.mb--x2 {
  margin-bottom: 20px;
}
.mb--x3 {
  margin-bottom: 30px;
}
.mb--x4 {
  margin-bottom: 40px;
}
.mb--x7 {
  margin-bottom: 70px;
}
.m--none {
  margin: 0px;
}

.order--1 {
  order: 1;
}
.order--2 {
  order: 2;
}
.order--3 {
  order: 3;
}

.page__content {
  transition: all 0.4s ease-in;
}

.page-enter-active,
.page-leave-active {
  transition: opacity 0.5s;
}

.page-enter,
.page-leave-active {
  opacity: 0;
}

